# NoSession

./: .gitattributes  LICENSE  README.md  SECURITY.md  build.gradle  build.gradle.kts  gradle.lockfile  gradle.properties  gradlew  releasesigner.asc  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-with-provenance.yml  codeql.yml  gradle.yml
buildSrc/: build.gradle.kts  gradle.lockfile
chromium_bindings/: .gitignore  CMakeLists.txt  build.gradle.kts
chromium_bindings/chromium/base/: cfi_buildflags.h  clang_profiling_buildflags.h  feature_list_buildflags.h  logging_buildflags.h  rust_buildflags.h  sanitizer_buildflags.h  tracing_buildflags.h
chromium_bindings/chromium/base/allocator/partition_allocator/: partition_alloc_buildflags.h
chromium_bindings/chromium/base/allocator/partition_allocator/partition_alloc_base/debug/: debugging_buildflags.h
chromium_bindings/chromium/base/debug/: debugging_buildflags.h
chromium_bindings/chromium/sandbox/win/src/: heap_helper.cc  nt_internals.h
chromium_bindings/src/main/cpp/: gq_malwarefight_nosession_win_WindowsSandbox.cpp  gq_malwarefight_nosession_win_WindowsSandbox.h
gradle/: verification-metadata.xml
nosession_libc/: build.gradle.kts
sandbox/: .gitignore  CMakeLists.txt  build.gradle.kts
windows_sandbox/: CMakeLists.txt  build.gradle.kts
windows_sandbox/src/main/cpp/: ContainerCreate.cpp  gq_malwarefight_nosession_win_WindowsSandbox.cpp  gq_malwarefight_nosession_win_WindowsSandbox.h
windows_sandbox/src/main/java/gq/malwarefight/nosession/win/: WindowsSandbox.java
(+38 files in other folders)
